support override encoding